API-Call text changed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
+        <h3 class="text-center text-light bg-dark p-3">User Details</h3>
     <div class="container">
-    <h1 class="text-center text-primary m-4">User Details</h1>
             <div id="result" class="row">
         </div>
     </div>
@@ -50,24 +50,24 @@
             <div class="card border-0">
                         <div class="card-body">
                              <h3 class="text-danger text-center border-bottom ">User : ${user.id}</h3>
-                            <h6 class="card-title p-2">ID : <span class="text-info">${user.id}</span></h6>
-                            <h6 class="card-title p-2">Name : <span class="text-info">${user.name}</span></h6>
-                            <h6 class="card-title p-2">Username : <span class="text-info">${user.username}</span></h6>
-                            <h6 class="card-title p-2">Email : <span class="text-info">${user.email}</span></h6>
+                            <h6 class="card-title p-2">ID : <span class="text-primary">${user.id}</span></h6>
+                            <h6 class="card-title p-2">Name : <span class="text-primary">${user.name}</span></h6>
+                            <h6 class="card-title p-2">Username : <span class="text-primary">${user.username}</span></h6>
+                            <h6 class="card-title p-2">Email : <span class="text-primary">${user.email}</span></h6>
                             <h6 class="card-title p-2">Address : </h6>
-                            <p class="card-title p-2">Street : <span class="text-info">${user.address.street}</span></p>
-                            <p class="card-title p-2">Suite : <span class="text-info">${user.address.suite}</span></p>
-                            <p class="card-title p-2">City : <span class="text-info">${user.address.city}</span></p>
-                            <p class="card-title p-2">Zipcode : <span class="text-info">${user.address.zipcode}</span></p>
+                            <p class="card-title p-2">Street : <span class="text-primary">${user.address.street}</span></p>
+                            <p class="card-title p-2">Suite : <span class="text-primary">${user.address.suite}</span></p>
+                            <p class="card-title p-2">City : <span class="text-primary">${user.address.city}</span></p>
+                            <p class="card-title p-2">Zipcode : <span class="text-primary">${user.address.zipcode}</span></p>
                             <h6 class="card-title p-2">Location : </h6>
-                            <p class="card-title p-2">Latitude : <span class="text-info">${user.address.geo.lat}</span></p>
-                            <p class="card-title p-2">Longtitude : <span class="text-info">${user.address.geo.lng}</span></p>
-                            <h6 class="card-title p-2">Phone : <span class="text-info">${user.phone}</span></h6>
-                            <h6 class="card-title p-2">Website : <span class="text-info">${user.website}</span></h6>
+                            <p class="card-title p-2">Latitude : <span class="text-primary">${user.address.geo.lat}</span></p>
+                            <p class="card-title p-2">Longtitude : <span class="text-primary">${user.address.geo.lng}</span></p>
+                            <h6 class="card-title p-2">Phone : <span class="text-primary">${user.phone}</span></h6>
+                            <h6 class="card-title p-2">Website : <span class="text-primary">${user.website}</span></h6>
                             <h6 class="card-title p-2">Company : </h6>
-                            <p class="card-title p-2">Name : <span class="text-info">${user.company.name}</span></p>
-                            <p class="card-title p-2">Catchphrase : <span class="text-info">${user.company.catchPhrase}</span></p>
-                            <p class="card-title p-2">BS : <span class="text-info">${user.company.bs}</span></p>
+                            <p class="card-title p-2">Name : <span class="text-primary">${user.company.name}</span></p>
+                            <p class="card-title p-2">Catchphrase : <span class="text-primary">${user.company.catchPhrase}</span></p>
+                            <p class="card-title p-2">BS : <span class="text-primary">${user.company.bs}</span></p>
 
                         </div>
                         </div>`
